knok.com (archived on 2017-04-20)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;education",
  "char_count": 12205,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.7,
  "homepage_snapshot_redirected_domain": "knok.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20170426180925id_/http://knok.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20170426180925id_/http%3A//knok.com",
  "interval": "2017_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "knok.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20170420042725id_/http%3A//www.knok.com/privacy-policy",
  "policy_title": "Knok - Home Exchange, Apartment Rental and Travel Guide for Families",
  "policy_url": "knok.com/privacy-policy",
  "sha1": "2af04927ca91a5b877b934823c7823e6af4cb227",
  "simhash": 11551401130784538099,
  "simhash_updated": false,
  "site_hostname": "knok.com",
  "site_url": "http://knok.com",
  "smog": 15.16,
  "strict_updated": false,
  "timestamp": "20170420042725",
  "word_count": 1958,
  "year": 2017
}

--- a/k/kn/kno/knok.com.html
+++ b/k/kn/kno/knok.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the knok.com privacy policy that was archived on 2016-12-30.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161230060806id_/http%3A//www.knok.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the knok.com privacy policy that was archived on 2017-04-20.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170420042725id_/http%3A//www.knok.com/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><head>
 
@@ -8,7 +8,7 @@
 
 <meta charset="utf-8"> 
 <meta name="description" content="Knok is a network of trusted families, who swap their beautiful houses for holidays and enjoy travelling the world with their children">
-<meta name="dc.source" content="http://www.knok.com/privacy-policy">
+<meta name="dc.source" content="https://www.knok.com/privacy-policy">
 <meta name="dc.title" content="Knok - Home Exchange, Apartment Rental and Travel Guide for Families">
 <meta name="dc.description" content="Knok is a network of trusted families, who swap their beautiful houses for holidays and enjoy travelling the world with their children">
 
@@ -58,9 +58,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 })(window,document,'script','dataLayer','GTM-NG5T49');</script>
 <!-- End Google Tag Manager --><nav class="navbar main-menu navbar-fixed-top" role="navigation">
 	<div class="navbar-header">
-		    	<a class="navbar-brand no-padding-top" href="http://www.knok.com/"><img src="http://www.knok.com/img/knok-logo.png"></a>
+		    	<a class="navbar-brand no-padding-top" href="https://www.knok.com/"><img src="https://www.knok.com/img/knok-logo.png"></a>
 				<ul class="nav navbar-nav navbar-right">
-							<li><a href="http://www.knok.com/family-travel-guide"><i class="ico ico-travel-guide"></i> Travel Guide</a></li>
+							<li><a href="https://www.knok.com/family-travel-guide"><i class="ico ico-travel-guide"></i> Travel Guide</a></li>
 								<li><a class="no-logged" href="#" data-toggle="modal" data-target="#modal_log_in">Log in</a></li>
 								<li class="join-nt-container"><span class="btn btn-xs btn-default join-nt">Join now</span></li>
 					</ul>
@@ -165,38 +165,38 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 			<div class="col-sm-3">
 				<ul class="list-unstyled">
 					<li class="title">Learn more</li>
-					<li><a href="http://www.knok.com/family-travel-guide">Family friendly travel guide</a></li>
-					<li><a href="http://www.knok.com/enjoy-the-world">Tour</a></li>
-					<li><a href="http://www.knok.com/trust">Trust and security</a></li>
-					<li><a href="http://www.knok.com/pricing">Pricing</a></li>
-					<li><a href="http://www.knok.com/do-the-math">Do the math</a></li>
-					<li><a href="http://www.knok.com/next-steps">How to do a home exchange</a></li>
-					<li><a href="http://www.knok.com/help">Help / FAQs</a></li>
+					<li><a href="https://www.knok.com/family-travel-guide">Family friendly travel guide</a></li>
+					<li><a href="https://www.knok.com/enjoy-the-world">Tour</a></li>
+					<li><a href="https://www.knok.com/trust">Trust and security</a></li>
+					<li><a href="https://www.knok.com/pricing">Pricing</a></li>
+					<li><a href="https://www.knok.com/do-the-math">Do the math</a></li>
+					<li><a href="https://www.knok.com/next-steps">How to do a home exchange</a></li>
+					<li><a href="https://www.knok.com/help">Help / FAQs</a></li>
 				</ul>
 			</div>
 			<div class="col-sm-3">
 				<ul class="list-unstyled">
 					<li class="title">Top destinations</li>
-											<li><a href="http://www.knok.com/top/family-travel-barcelona">Barcelona</a></li>
-											<li><a href="http://www.knok.com/top/family-travel-new-york">New York</a></li>
-											<li><a href="http://www.knok.com/top/family-travel-rome">Rome</a></li>
-											<li><a href="http://www.knok.com/top/family-travel-paris">Paris</a></li>
-											<li><a href="http://www.knok.com/top/family-travel-london">London</a></li>
+											<li><a href="https://www.knok.com/top/family-travel-barcelona">Barcelona</a></li>
+											<li><a href="https://www.knok.com/top/family-travel-new-york">New York</a></li>
+											<li><a href="https://www.knok.com/top/family-travel-rome">Rome</a></li>
+											<li><a href="https://www.knok.com/top/family-travel-paris">Paris</a></li>
+											<li><a href="https://www.knok.com/top/family-travel-london">London</a></li>
 									</ul>
 			</div>
 			<div class="col-sm-6">
 				<div class="col-sm-4">
 					<ul class="list-unstyled">
 						<li class="title">About us</li>
-						<li><a href="http://www.knok.com/our-story">Our story</a></li>
-												<li><a href="http://www.knok.com/contact">Contact</a></li>
+						<li><a href="https://www.knok.com/our-story">Our story</a></li>
+												<li><a href="https://www.knok.com/contact">Contact</a></li>
 					</ul>
 				</div>
 				<div class="col-sm-4">
 					<ul class="list-unstyled">
 						<li class="title">Read </li>
 						<li><a target="_blank" href="http://www.knok.com/knoleskine/">Our blog: Knoleskine</a></li>
-						<li><a target="_blank" href="http://www.knok.com/100-cities/" title="100 cities to home swap before you die">100 cities to home swap before you die</a></li>
+						<li><a target="_blank" href="https://www.knok.com/100-cities/" title="100 cities to home swap before you die">100 cities to home swap before you die</a></li>
 					</ul>
 				</div>
 				<div class="col-sm-4">
@@ -216,11 +216,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 		<div class="col-sm-12">
 			<div class="container inner-foot">
 				<span>Languages</span>
-				<a href="http://www.knok.com/">English</a>
-				<a href="http://www.knok.com/fr">Français</a>
-				<a href="http://www.knok.com/es">Español</a>
-				<a href="http://www.knok.com/de">Deutsch</a>
-				<a href="http://www.knok.com/it">Italiano</a>
+				<a href="https://www.knok.com/">English</a>
+				<a href="https://www.knok.com/fr">Français</a>
+				<a href="https://www.knok.com/es">Español</a>
+				<a href="https://www.knok.com/de">Deutsch</a>
+				<a href="https://www.knok.com/it">Italiano</a>
 			</div>
 		</div>
 	</div>
@@ -229,13 +229,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 			<div class="container info">
 				<div class="row">
 					<div class="col-sm-4 text-left">
-						<a class="ft-terms" href="http://www.knok.com/term-and-conditions">Terms and Conditions</a> / <a class="ft-terms" href="http://www.knok.com/privacy-policy">Privacy Policy</a>
+						<a class="ft-terms" href="https://www.knok.com/term-and-conditions">Terms and Conditions</a> / <a class="ft-terms" href="https://www.knok.com/privacy-policy">Privacy Policy</a>
 					</div>
 					<div class="col-sm-4 text-center">
-						<img src="http://www.knok.com/img/logo-ft.png" alt="Knok">
+						<img src="https://www.knok.com/img/logo-ft.png" alt="Knok">
 					</div>
 					<div class="col-sm-4 text-right">
-						© Knok Exchange S.L. 2016					</div>
+						© Knok Exchange S.L. 2017					</div>
 				</div>
 			</div>
 		</div>
@@ -244,26 +244,27 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
-<script src="http://www.knok.com/js/libs/jquery.customSelect.js"></script>
+<script src="https://www.knok.com/js/libs/jquery.customSelect.js"></script>
 
-<script type="text/javascript" src="http://www.knok.com/js/libs/bootstrap.min.js"></script>
+<script type="text/javascript" src="https://www.knok.com/js/libs/bootstrap.min.js"></script>
 
-<script type="text/javascript" src="http://www.knok.com/js/knok.js"></script>
-<script type="text/javascript" src="http://www.knok.com/js/libs/plugins.js"></script>
-<script type="text/javascript" src="http://www.knok.com/js/libs/fullcalendar.js"></script>
-<script type="text/javascript" src="http://www.knok.com/js/libs/jquery.togglebox.js"></script>
+<script type="text/javascript" src="https://www.knok.com/js/knok.js"></script>
+<script type="text/javascript" src="https://www.knok.com/js/libs/plugins.js"></script>
+<script type="text/javascript" src="https://www.knok.com/js/libs/fullcalendar.js"></script>
+<script type="text/javascript" src="https://www.knok.com/js/libs/jquery.togglebox.js"></script>
+
+<script src="https://apis.google.com/js/api:client.js"></script>
 
 <script src="//maps.googleapis.com/maps/api/js?v=3.5&amp;sensor=false&amp;libraries=places&amp;language=en"></script>
 <script>var geocoder; geocoder = new google.maps.Geocoder();</script>
-
 
 <div class="modal" id="flash_message_modal">
 	<div class="modal-dialog">
 		<div class="modal-content text-center">
 			<div class="modal-header">
 				<button type="button" class="close" data-dismiss="modal" aria-hidden="true"></button>
-				<img src="http://www.knok.com/img/common/success-modal-icon.png" class="success-img unseen" alt="">
-				<img src="http://www.knok.com/img/common/error-modal-icon.png" class="error-img unseen" alt="">
+				<img src="https://www.knok.com/img/common/success-modal-icon.png" class="success-img unseen" alt="">
+				<img src="https://www.knok.com/img/common/error-modal-icon.png" class="error-img unseen" alt="">
 				<h4 class="modal-title"></h4>
 				<p class="modal-desc unseen"></p>
 			</div>
@@ -278,7 +279,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 		<div class="modal-content text-center">
 			<div class="modal-header">
 				<button type="button" class="close" data-dismiss="modal" aria-hidden="true"></button>
-				<img src="http://www.knok.com/img/common/error-modal-icon.png" alt="">
+				<img src="https://www.knok.com/img/common/error-modal-icon.png" alt="">
 				<h4 class="modal-title">Something went wrong</h4>
 				<p class="modal-desc-error">Please tell us what you were doing and we will fix it right away.</p>
 			</div>
@@ -320,25 +321,25 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 								<input type="checkbox" name="stay_signed" checked="checked"> 
 						 		Stay signed in.						 	</label>
 						</div>
-						<a href="http://www.knok.com/remember-password">Forgot your password?</a>
+						<a href="https://www.knok.com/remember-password">Forgot your password?</a>
 					</div>
 					<p class="text-center"><button type="button" class="btn btn-info margin-top-lg" onclick="user_login();">Log in</button></p>
 				</form>
 			</div>
 			<div class="modal-footer">
-				<p class="text-right"><a href="http://www.knok.com/join-now">Not a member?</a></p>
+				<p class="text-right"><a href="https://www.knok.com/join-now">Not a member?</a></p>
 			</div>
 		</div>
 	</div>
 </div><div class="modal" id="no_premium_modal">
 	<div class="modal-dialog">
 		<div class="modal-content">
-			<img class="img-responsive" src="http://www.knok.com/img/auth/modal-bg-not-premium.jpg"> 
+			<img class="img-responsive" src="https://www.knok.com/img/auth/modal-bg-not-premium.jpg"> 
 			<button type="button" class="close" data-dismiss="modal" aria-hidden="true"></button>
 			<div class="modal-inner-content">
 				<h3 class="modal-title">Apply to the Vacation Travel Network</h3>
 				<p>Connect to thousands of like-minded families from around the world, who let each other stay at our beautiful homes when we're not there</p>
-									<a href="http://www.knok.com/join-now" class="btn btn-danger btn-sm">Apply to join</a>
+									<a href="https://www.knok.com/join-now" class="btn btn-danger btn-sm">Apply to join</a>
 							</div>
 		</div>
 	</div>
@@ -407,8 +408,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 					</div>
 				</div>
 				<p class="bottom-action-box"><b>Want to know more about it?</b> Book a call with a Knok Connector and we'll help you get on board.</p>	
-				<a href="http://www.knok.com/join-now" class="btn btn-danger not-member-join">Join the network</a>
-				<a href="http://www.knok.com/conversation/1000001" class="btn btn-danger not-member-be-premium unseen">Talk to your Knok Connector</a>
+				<a href="https://www.knok.com/join-now" class="btn btn-danger not-member-join">Join the network</a>
+				<a href="https://www.knok.com/conversation/1000001" class="btn btn-danger not-member-be-premium unseen">Talk to your Knok Connector</a>
 				<button type="button" data-dismiss="modal" class="margin-top-lg welcome-guide unseen btn btn-danger">See the Guide</button>
 			</div>
 		</div>
@@ -458,7 +459,7 @@ $(document).ready(function() {
 		var locations
 	if($("#search_destination_top").length > 0){
 		search_auto_complete("search_destination_top", function(location){ 
-			$('<form action="http://www.knok.com/search-results" method="GET"/>')
+			$('<form action="https://www.knok.com/search-results" method="GET"/>')
 				.append($('<input type="hidden" name="location[locality]" value="' + location["locality"] + '">'))
 				.append($('<input type="hidden" name="location[adm2]" value="' + location["adm2"] + '">'))
 				.append($('<input type="hidden" name="location[adm1]" value="' + location["adm1"] + '">'))
@@ -472,7 +473,7 @@ $(document).ready(function() {
 	var options = {
 		 html: true
 		,trigger: "click"
-		,content: "<button class='btn btn-default btn-xs' onclick='get_facebook_login_url();'><i class='knok-icon ico-facebook'></i>  Sign up with Facebook</button><button class='btn btn-xs btn-default' onclick='get_google_login_url();'><i class='knok-icon ico-google'></i> Sign up with Google</button><a class='simple' href='http://www.knok.com/join-now'>Sign up with your email</a>"
+		,content: "<button class='btn btn-default btn-xs' onclick='get_facebook_login_url();'><i class='knok-icon ico-facebook'></i>  Sign up with Facebook</button><button class='btn btn-xs btn-default' onclick='get_google_login_url();'><i class='knok-icon ico-google'></i> Sign up with Google</button><a class='simple' href='https://www.knok.com/join-now'>Sign up with your email</a>"
 		,placement: "bottom"
 		,delay: {show: 500, hide: 100}
 	};
@@ -544,17 +545,32 @@ function show_search_input() {
 
 
 function get_facebook_login_url(){
-	ajax("auth", "get_facebook_login_url", {link : 'http://www.knok.com/log-in'}, function(output){
+	ajax("auth", "get_facebook_login_url", {link : 'https://www.knok.com/log-in'}, function(output){
 		if(output.substring(0,4) == "http") window.location = output;
 		else error_modal(output);
 	}, "");
 }
 
 function get_google_login_url(){
-	ajax("auth", "get_google_login_url", {link : 'http://www.knok.com/log-in'}, function(output){
+    gapi.load('auth2', function(){
+		// Retrieve the singleton for the GoogleAuth library and set up the client.
+		auth2 = gapi.auth2.init({
+			client_id: '61988197272.apps.googleusercontent.com',
+			cookiepolicy: 'single_host_origin'
+		});
+		
+		auth2.signIn().then(function() {
+			console.log(auth2.currentUser.get().getAuthResponse()["id_token"]);
+			window.location = 'https://www.knok.com/log-in' + "?id_token=" + auth2.currentUser.get().getAuthResponse()["id_token"];
+		});	  
+	  
+      
+    });	
+	
+	/*ajax("auth", "get_google_login_url", {link : 'https://www.knok.com/log-in'}, function(output){
 		if(output.substring(0,4) == "http") window.location = output;
 		else error_modal(output);
-	}, "");
+	}, "");*/
 }
 
 function user_login(){
@@ -566,7 +582,7 @@ function user_login(){
 		ajax('auth','user_login', json, 
 		function(output){
 			if(output == 1) {
-								window.location = "http://www.knok.com/privacy-policy";
+								window.location = "https://www.knok.com/privacy-policy";
 							} else if(output == -1) {
 				flash_message_modal("The email and/or password you entered does not match.");
 			} else if(output == -2) {
