--- a/s/sc/scr/scribie.com.html
+++ b/s/sc/scr/scribie.com.html
@@ -1,18 +1,12 @@
-<!--The following is the downloaded HTML source of the scribie.com privacy policy that was archived on 2016-12-21.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161221155922id_/https%3A//scribie.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the scribie.com privacy policy that was archived on 2017-04-20.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170420094341id_/https%3A//scribie.com/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en" class=" js hashchange history draganddrop websockets cssanimations video audio localstorage"><!--<![endif]--><head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-<meta name="description" content="Privacy policy for the most advanced audio/video transcription service; fastest turn around of 12 hours, 4-step process for maximum accuracy, in-browser transcription editor, bulk discounts, integrated teleconferencing service, group account support, 24/7 Live Chat, +1 866 941 4131">
+<meta name="description" content="The quickest, easiest way to get audio/video files transcribed, pay by audio time, as low as $0.75/minute of audio, 4-step process to guarantee maximum accuracy, fixed price. Upload and order now!">
 <meta name="author" content="CGBiz Corporation">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="shortcut icon" href="/img/favicon.ico">
-
-<title>Scribie | Privacy Policy</title>
-
-<link rel="stylesheet" href="/css/A.app-style.css+style.css+service.css,Mcc.TJGA80KnYr.css.pagespeed.cf.kAfXVo3v75.css" type="text/css"><script async="" charset="utf-8" src="//v2.zopim.com/?25BX8VOqLp7xI4zAt7tBj4OEJn3Dl8im" type="text/javascript"></script><script async="" src="//www.google-analytics.com/analytics.js"></script><script src="https://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js" type="text/javascript" async=""></script><script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-<script type="text/javascript">!window.jQuery&&document.write(unescape('%3Cscript src="/js/c/jquery-1.7.2.min.js"%3E%3C/script%3E'))</script><script src="/js/c/jquery-1.7.2.min.js"></script>
 
 <!--[if lt IE 9]>
 <link rel="stylesheet" href="/combiner?ie.css" type="text/css" media="all">
@@ -20,12 +14,15 @@
 <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
 <![endif]-->
 
-<link rel="icon" href="/img/xscribie-logo.png.pagespeed.ic.v1xNTkwfGJ.png" ,="" sizes="32x32">
-<link rel="icon" href="/img/xscribie-logo.png.pagespeed.ic.v1xNTkwfGJ.png" ,="" sizes="192x192">
-<link rel="apple-touch-icon-precomposed" href="/img/xscribie-logo.png.pagespeed.ic.v1xNTkwfGJ.png">
-<meta name="msapplication-TileImage" content="img/scribie-logo.png">
+<link rel="icon" href="/img/xicon-new.png.pagespeed.ic.yh7ZQccgKu.png" ,="" sizes="32x32">
+<link rel="icon" href="/img/xicon-new.png.pagespeed.ic.yh7ZQccgKu.png" ,="" sizes="192x192">
+<link rel="apple-touch-icon-precomposed" href="/img/xicon-new.png.pagespeed.ic.yh7ZQccgKu.png">
+<meta name="msapplication-TileImage" content="img/icon-new.png">
 
-<script type="text/javascript" src="/js/modernizr.js.pagespeed.jm.4Lh95BvoDF.js"></script><script type="text/javascript" src="/js/open-sans.js"></script><script src="/js/bootstrap,_transition.js+bootstrap,_collapse.js+app-common.js.pagespeed.jc.ex64MhyNdr.js"></script><script>eval(mod_pagespeed_8ScaFm_XEv);</script><script>eval(mod_pagespeed_JfyRxMAew7);</script><script>eval(mod_pagespeed_H5H8KwHHCF);</script>
+<title>Scribie Audio/Video Transcription | Privacy Policy</title>
+<link rel="stylesheet" href="/css/A.app-style.css+style.css+service.css,Mcc.4dNMeLe0-5.css.pagespeed.cf.SK4hZ7thw7.css" type="text/css"><script async="" charset="utf-8" src="//v2.zopim.com/?25BX8VOqLp7xI4zAt7tBj4OEJn3Dl8im" type="text/javascript"></script><script async="" src="//www.google-analytics.com/analytics.js"></script><script src="https://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js" type="text/javascript" async=""></script><script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+<script type="text/javascript">!window.jQuery&&document.write(unescape('%3Cscript src="/js/c/jquery-1.7.2.min.js"%3E%3C/script%3E'))</script><script src="/js/c/jquery-1.7.2.min.js"></script>
+<script type="text/javascript" src="/js/modernizr.js.pagespeed.jm.4Lh95BvoDF.js"></script><script type="text/javascript" src="/js/open-sans.js"></script><script src="/js/bootstrap,_transition.js+bootstrap,_collapse.js+app-common.js.pagespeed.jc.Pg1duszxjR.js"></script><script>eval(mod_pagespeed_8ScaFm_XEv);</script><script>eval(mod_pagespeed_JfyRxMAew7);</script><script>eval(mod_pagespeed_H5H8KwHHCF);</script>
 </head>
 
 <body>
@@ -52,7 +49,7 @@
                             <div class="row">
                                 <div class="col-sm-12">
                                     <div id="topnav" class="pull-right"> 
-                                        <span class="glyphicon glyphicon-phone-alt" aria-hidden="true"></span> <a href="/contact-us#phone" title="From 9 AM to 5 PM EST" class="phone">+1 866 941 4131</a><a href="/blog/" title="Visit our blog">Blog</a><a href="/faq" title="Frequently asked questions">FAQ</a><a href="/freelance-transcription#intro">Transcribers</a>                                    </div>
+                                        <a href="/contact-us#phone"><span class="glyphicon glyphicon-phone-alt" aria-hidden="true"></span> +1 866 941 4131</a><a href="/account/login" title="Log in to your account">Login</a><a href="/account/sign-up" title="Sign up for an account">Sign Up</a>                                    </div>
                                 </div>
                             </div>
 
@@ -60,7 +57,7 @@
                                 <div class="col-sm-12">
                                     <div id="menu" class="pull-right">
                                         <ul class="items list-unstyled list-inline">
-                                            <li class="upload"><a href="/files/upload"><span class="glyphicon glyphicon-open" aria-hidden="true"></span> Upload</a></li><li><a href="/"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> Home</a></li><li><a href="/transcription/pricing"><span class="glyphicon glyphicon-usd" aria-hidden="true"></span> Pricing</a></li><li><a href="/account/login"><span class="glyphicon glyphicon-log-in" aria-hidden="true"></span> Login</a></li><li><a href="/contact-us"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> Contact</a></li>                                        </ul>
+                                            <li class="upload"><a href="/files/upload"><span class="glyphicon glyphicon-open" aria-hidden="true"></span> Upload</a></li><li><a href="/"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> Home</a></li><li><a href="/transcription/pricing"><span class="glyphicon glyphicon-usd" aria-hidden="true"></span> Pricing</a></li><li><a href="/conference/recording"><span class="glyphicon glyphicon-phone" aria-hidden="true"></span> Calls</a></li><li><a href="/contact-us"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> Contact</a></li>                                        </ul>
                                     </div>
                                 </div>
                             </div>
@@ -88,10 +85,10 @@
 
                 <div id="navbar-main" class="collapse navbar-collapse">
                     <div class="navbar-text navbar-right">
-                        <span class="glyphicon glyphicon-phone-alt" aria-hidden="true"></span> <a href="/contact-us#phone" title="From 9 AM to 5 PM EST" class="phone">+1 866 941 4131</a><a href="/blog/" title="Visit our blog">Blog</a><a href="/faq" title="Frequently asked questions">FAQ</a><a href="/freelance-transcription#intro">Transcribers</a>                    </div>
+                        <a href="/contact-us#phone"><span class="glyphicon glyphicon-phone-alt" aria-hidden="true"></span> +1 866 941 4131</a><a href="/account/login" title="Log in to your account">Login</a><a href="/account/sign-up" title="Sign up for an account">Sign Up</a>                    </div>
 
                     <ul class="nav navbar-nav">
-                        <li class="upload"><a href="/files/upload"><span class="glyphicon glyphicon-open" aria-hidden="true"></span> Upload</a></li><li><a href="/"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> Home</a></li><li><a href="/transcription/pricing"><span class="glyphicon glyphicon-usd" aria-hidden="true"></span> Pricing</a></li><li><a href="/account/login"><span class="glyphicon glyphicon-log-in" aria-hidden="true"></span> Login</a></li><li><a href="/contact-us"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> Contact</a></li>                    </ul>
+                        <li class="upload"><a href="/files/upload"><span class="glyphicon glyphicon-open" aria-hidden="true"></span> Upload</a></li><li><a href="/"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> Home</a></li><li><a href="/transcription/pricing"><span class="glyphicon glyphicon-usd" aria-hidden="true"></span> Pricing</a></li><li><a href="/conference/recording"><span class="glyphicon glyphicon-phone" aria-hidden="true"></span> Calls</a></li><li><a href="/contact-us"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> Contact</a></li>                    </ul>
                 </div>
             </nav>
         </div>
@@ -161,12 +158,14 @@
             <div class="row">
                 <div class="col-sm-4">
                     <span class="copy pull-left">
-                        © Copyright 2008-2016 by CGBiz Corporation.<br>All Rights Reserved.
+                        © Copyright 2008-2017 by CGBiz Corporation.<br>All Rights Reserved.
                     </span>
                 </div> <!-- col-sm-4 -->
 
                 <div class="col-sm-8">
                     <div class="links pull-right">
+                        <a href="/blog/">Blog</a> |
+                        <a href="/faq">FAQ</a> |
                         <a href="/freelance-transcription#intro">Transcribers</a> |
                         <a href="/affiliate">Affiliates</a> |
                         <a href="/docs/api">API</a> | 
