--- a/u/ua/uae/uaecarz.com.html
+++ b/u/ua/uae/uaecarz.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the uaecarz.com privacy policy that was archived on 2016-04-12.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20160412104722id_/http%3A//www.uaecarz.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the uaecarz.com privacy policy that was archived on 2017-04-20.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170420141121id_/http%3A//www.uaecarz.com/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -198,10 +198,10 @@ contact@uaecarz.com</p>
                 <div class="span3">
                     <h2><a href="http://www.uaecarz.com/showrooms">Showrooms</a></h2>
                     <ul>
-                                                <li><a href="http://www.uaecarz.com/showroom/al-rabiee-used-cars">Al Rabiee Used Cars</a></li>
+                                                <li><a href="http://www.uaecarz.com/showroom/bin-humaidan-motors">Bin Humaidan Motors</a></li>
+                                                <li><a href="http://www.uaecarz.com/showroom/winner-motors">Winner Motors</a></li>
+                                                <li><a href="http://www.uaecarz.com/showroom/adnan-shanshal">Adnan Shanshal</a></li>
                                                 <li><a href="http://www.uaecarz.com/showroom/ammar-motors">Ammar Motors</a></li>
-                                                <li><a href="http://www.uaecarz.com/showroom/al-suraj-al-muneer-used-cars">Al Suraj Al Muneer Used Cars</a></li>
-                                                <li><a href="http://www.uaecarz.com/showroom/mahmood-al-jaboori-used-cars-llc">Mahmood Al Jaboori Used Cars LLC.</a></li>
                                                 <li><a href="http://www.uaecarz.com/showrooms">More Showrooms »</a></li>
                     </ul>
                     <div class="clearfix"></div>
@@ -209,10 +209,10 @@ contact@uaecarz.com</p>
                 <div class="span3">
                     <h2><a href="http://www.uaecarz.com/rentals">Rentals</a></h2>
                     <ul>
-                                                <li><a href="http://www.uaecarz.com/rental/standard-rent-a-car-9">Standard Rent A Car</a></li>
                                                 <li><a href="http://www.uaecarz.com/rental/al-hosna-rent-a-car-7">Al Hosna Rent a Car</a></li>
+                                                <li><a href="http://www.uaecarz.com/rental/al-akha-rent-a-car-6">Al Akha Rent a Car</a></li>
+                                                <li><a href="http://www.uaecarz.com/rental/gold-coast-rent-a-car-1">Gold Coast Rent A Car</a></li>
                                                 <li><a href="http://www.uaecarz.com/rental/al-aqsa-rent-a-car-5">Al Aqsa Rent A Car</a></li>
-                                                <li><a href="http://www.uaecarz.com/rental/al-quoz-rent-a-car-4">Al Quoz Rent A Car</a></li>
                                                 <li><a href="http://www.uaecarz.com/rentals">More Rentals »</a></li>
                     </ul>
                     <div class="clearfix"></div>
@@ -230,7 +230,7 @@ contact@uaecarz.com</p>
         <div class="ftrbtm">
             <div class="container">
                 <div class="row">
-                    <div class="span6 copyright">© 2016, UAECarz.com. All Rights Reserved.</div>
+                    <div class="span6 copyright">© 2017, UAECarz.com. All Rights Reserved.</div>
                     <div class="span6 social-icons">
 						<div class="facebook"><a target="_blank" href="http://www.facebook.com/Uaecarz">Facebook</a></div>
 						<div class="twitter"><a target="_blank" href="https://twitter.com/uaecarz">Twitter</a></div>
