--- a/l/le/lex/lexity.com.html
+++ b/l/le/lex/lexity.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the lexity.com privacy policy that was archived on 2016-04-02.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20160402012957id_/https%3A//lexity.com/terms/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the lexity.com privacy policy that was archived on 2017-04-20.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170420213111id_/https%3A//lexity.com/terms/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head><script type="text/javascript" async="" src="//np.lexity.com/1e817333"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script async="" src="/assets/webshims/shims/combos/1.js"></script><script async="" src="/assets/webshims/shims/dom-extend.js"></script>
 <meta content="text/html;charset=UTF-8" http-equiv="Content-Type">
@@ -10,10 +10,10 @@
   var LEX = LEX || {};
   LEX.Q = LEX.Q || [];
 </script>
-<link rel="stylesheet" href="/assets/webshims/shims/styles/shim.css"><link href="/assets/application-dda6de40088ea48248b96d963fa5a0f0.css" media="all" rel="stylesheet" type="text/css">
+<link rel="stylesheet" href="/assets/webshims/shims/styles/shim.css"><link href="/assets/application-7048f3cbeb3daa541a74e6733c8ede92.css" media="all" rel="stylesheet" type="text/css">
 <script src="/assets/application-184b286ed25a7e9efd8eb1a9a0786118.js" type="text/javascript"></script><style type="text/css">@charset "UTF-8";[ng\:cloak],[ng-cloak],[data-ng-cloak],[x-ng-cloak],.ng-cloak,.x-ng-cloak{display:none;}ng\:form{display:block;}</style>
 <meta content="authenticity_token" name="csrf-param">
-<meta content="cnn127aGYDhiGa6NwPP/hUJhkm2k/R7YPjdVq7FfnEU=" name="csrf-token">
+<meta content="fcOUcmR525nHQGC36pGxVeq94YEEoQBXLSxIbGY28e4=" name="csrf-token">
 <!--[if gte IE 9]>
 <style type="text/css">
 .gradient {
@@ -40,6 +40,10 @@ filter: none;
 <nav class="container no-margin">
 <div class="row">
 <a href="/" class="lexity-logo"><strong>Commerce Central</strong>
+<div class="from" style="font-size: 11px; text-align: right; font-weight: 600;color:grey">
+from
+<img height="11px" src="/assets/channels/yahoo.png">
+</div>
 </a><span class="for">for</span>
 <div class="navbar navbar-static">
 <div class="navbar-inner">
@@ -113,7 +117,7 @@ select platform
 <a href="#signin_menu" class="dropdown-toggle" data-toggle="dropdown">Sign In
 </a><ul class="dropdown-menu login-form">
 <li>
-<form accept-charset="UTF-8" action="https://lexity.com/login" id="header_signin_form" method="post" novalidate="novalidate"><div style="margin:0;padding:0;display:inline"><input name="utf8" type="hidden" value="✓"><input name="authenticity_token" type="hidden" value="cnn127aGYDhiGa6NwPP/hUJhkm2k/R7YPjdVq7FfnEU="></div><fieldset>
+<form accept-charset="UTF-8" action="https://www.lexity.com/login" id="header_signin_form" method="post" novalidate="novalidate"><div style="margin:0;padding:0;display:inline"><input name="utf8" type="hidden" value="✓"><input name="authenticity_token" type="hidden" value="fcOUcmR525nHQGC36pGxVeq94YEEoQBXLSxIbGY28e4="></div><fieldset>
 <div class="controls">
 <input class="big_input" id="login" lex_validate="email" name="login" placeholder="Login Email" type="email" value="">
 </div>
@@ -383,7 +387,7 @@ M-F 7am to 5pm PT
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
   })();
 </script>
-<script src="/assets/event_tracking-bced1318291c5185618501166ef940c6.js" type="text/javascript"></script>
+<script src="/assets/event_tracking-d7007614f08ef57d9fcc481d016ac256.js" type="text/javascript"></script>
 
 <script>
   LEX.Q.push(function() {
