--- a/l/lu/lum/lumendatabase.org.html
+++ b/l/lu/lum/lumendatabase.org.html
@@ -1,27 +1,27 @@
-<!--The following is the downloaded HTML source of the lumendatabase.org privacy policy that was archived on 2016-02-01.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20160201055608id_/https%3A//www.lumendatabase.org/pages/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the lumendatabase.org privacy policy that was archived on 2017-04-21.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170421195723id_/https%3A//lumendatabase.org/pages/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head>
   <meta charset="utf-8">
   <meta name="ROBOTS" content="NOODP">
   <title>Privacy :: Lumen</title>
-  <link href="/assets/application-8f40907c3cda96329c1479a32c86d3aa.css" media="all" rel="stylesheet" type="text/css">
-<meta content="authenticity_token" name="csrf-param">
-<meta content="18wVGNZ4iJNH4JwoECBeDOYFR0WEtVUssp5Ix+8pdA0=" name="csrf-token">
+  <link rel="stylesheet" media="all" href="/assets/application-5daae2d0bfe5f01a6de4252c0aeab9253b67256cd8cf63c3a501dfe074b13755.css">
+<meta name="csrf-param" content="authenticity_token">
+<meta name="csrf-token" content="t2auA1620cVGZ9mMvssjE4HIKpsAd6GTAvb33QPaChxLTyFt8uscIqwD+DM5dYCQqaFIz77ALsXZRVuvfQpXyA==">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="shortcut icon" href="/favicon.ico">
 <!--[if lt IE 9]>
 <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.2/html5shiv.js"></script>
 <![endif]-->
 </head>
-<body class="high_voltage-pages high_voltage-pages-show" style="">
+<body class="high_voltage-pages high_voltage-pages-show">
   <div id="flash">
 </div>
   <header class="app">
   <div class="header-inner">
     <h1>
-      <a href="/" id="root">
-        <img alt="Logo_2x" height="64" src="/assets/logo_2x-dd0e925290d798047abaa46316256db5.png" width="265">
+      <a id="root" href="/">
+        <img src="/assets/logo_2x-f513393d65f3567ec424e33dbf66474b3e7394f605e22228bb3f4241a2a39623.png" alt="Logo 2x" width="265" height="64">
 </a>    </h1>
     <nav class="main-nav">
   <ol class="nav-list">
@@ -275,7 +275,7 @@
         <li>We use <a href="http://piwik.org">Piwik</a> for our data analytics and store the resulting information on our own servers.</li>
       </ul>
     </li>
-    <li>The Lumen project also invites users to submit Cease and Desist notices and to sign up to receive news updates by email. If you use our online forms to submit information (e.g., to report receiving a C&amp;D Notice) you can choose to:
+    <li>The Lumen project also invites users to submit Cease and Desist notices. If you use our online forms to submit information (e.g., to report receiving a C&amp;D Notice) you can choose to:
       <ul class="bulleted">
         <li>Do so anonymously</li>
         <li>Include your contact information (name, address, phone number, email) but have it kept confidential by Lumen, or</li>
@@ -287,19 +287,14 @@
         <li>If you submit your contact information for inclusion in the publicly available cease &amp; desist letter database it will be available to anyone who visits the site.</li>
         <li>We use contact information to compile more accurate statistics on the use of cease and desist notices, and to contact you if we have a question.</li>
         <li>We will not use or disclose your information for any other purpose, unless compelled by law (see below)</li>
-        <li>Itf you submit a notice directly to our site, <b>it is up to you to decide what information to provide as part of your submission</b>.</li>
+        <li>If you submit a notice directly to our site, <b>it is up to you to decide what information to provide as part of your submission</b>.</li>
       </ul>
    </li>
   </ol>
 </section>
 
 <section class="info">
-  <h2>News and updates:</h2>
-  <p>If you sign up to receive news or updates, then we will request your e-mail address. We will use that address only for the purpose of sending you the requested information. We will not use or disclose it for any other purpose unless compelled by law.</p>
-  <h2>If you send us an email asking for further information:</h2>
-  <p>If you use the email contact addresses for the clinics that are identified on the web site (as listed on the "about us" page), your email will go directly to an attorney at the clinic. If this email seeks legal advice, we believe that it will be protected by the confidentiality provisions of the attorney-client privilege in the states where the clinics are located. We will not use or disclose this information for any other purpose unless compelled by law. (see below)</p>
-  <h2>If you want to get information about you that may be in our records, or if you want us to correct or remove such information:</h2>
-  <p>Contact the site's privacy administrator at team@Lumendatabase.org.</p>
+ 
   <h2>Law enforcement and other compelled disclosures:</h2>
   <p>In the event that we are required by law (including a court order) to disclose the information you submit, we will provide you with notice (unless we are prohibited) that a request for your information has been made and give you an opportunity to object to the disclosure. We will attempt to provide this notice by email, if you have given us an email address, or by postal mail if you have entered a postal address. We will independently object to over broad requests for access to information about users of our site. But, whether we can offer legal assistance to you in the case of a disclosure demand will depend on the circumstances. If you do not challenge the disclosure request we may be legally required to turn over your information.</p>
 </section>
@@ -318,7 +313,7 @@
     </nav>
   </div>
 </footer>
-  <script src="/assets/application-356ad207138706fd75caf43392719977.js" type="text/javascript"></script>
+  <script src="/assets/application-76376f6fcb728e7bf6492ec406cb20c99830c529bb9a7d433e5399262de68509.js"></script>
 
 
 
