--- a/i/in/int/internetweekny.com.html
+++ b/i/in/int/internetweekny.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the internetweekny.com privacy policy that was archived on 2016-10-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161020022752id_/http%3A//www.internetweekny.com/events/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the internetweekny.com privacy policy that was archived on 2017-04-22.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170422045233id_/http%3A//internetweekny.com/events/privacy) for the most accurate reproduction.-->
 
 <html><head></head><body><div id="privacy" style="padding: 20px">
 <h3 style="text-align: center; font-size: 20px">
