letsencrypt.org (archived on 2017-04-27)
{
  "alexa_rank": 12683,
  "analysis_subcorpus": true,
  "categories": "business;education;informationtech",
  "char_count": 5947,
  "classifier_probability": 0.97,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.63,
  "homepage_snapshot_redirected_domain": "letsencrypt.org",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20170331122942id_/https://letsencrypt.org/",
  "homepage_snapshot_url": "https://web.archive.org/web/20170331122942id_/http%3A//letsencrypt.org",
  "interval": "2017_A",
  "link_text": "privacy policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "letsencrypt.org",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20170427194720id_/https%3A//letsencrypt.org/privacy",
  "policy_title": "Privacy Policy - Let's Encrypt - Free SSL/TLS Certificates",
  "policy_url": "letsencrypt.org/privacy",
  "sha1": "df2a566327517e576fbc0aec40d1cef788837040",
  "simhash": 9020257072580651503,
  "simhash_updated": false,
  "site_hostname": "letsencrypt.org",
  "site_url": "http://letsencrypt.org",
  "smog": 15.2,
  "strict_updated": false,
  "timestamp": "20170427194720",
  "word_count": 982,
  "year": 2017
}

--- a/l/le/let/letsencrypt.org.html
+++ b/l/le/let/letsencrypt.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the letsencrypt.org privacy policy that was archived on 2016-10-26.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161026084916id_/https%3A//letsencrypt.org/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the letsencrypt.org privacy policy that was archived on 2017-04-27.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170427194720id_/https%3A//letsencrypt.org/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><head>
     <meta charset="utf-8">
@@ -91,6 +91,9 @@
                         <a href="/isrg/" class="pure-menu-link">Internet Security Research Group (ISRG)</a>
                       </li>
                       <li class="pure-menu-item">
+                        <a href="/docs/faq/" class="pure-menu-link">Frequently Asked Questions (FAQ)</a>
+                      </li>
+                      <li class="pure-menu-item">
                         <a href="/repository/" class="pure-menu-link">Policy and Legal Repository</a>
                       </li>
                       <li class="pure-menu-item">
@@ -146,7 +149,7 @@
 
 <h2 id="visitor">Visitor</h2>
 
-<p>When you are a Visitor browsing the Let’s Encrypt web site, we collect personally identifying information only if you use the donate button or sign up to use the Let’s Encrypt community support forum. If you use the Donate button, your interactions with PayPal are governed by the <a href="https://www.paypal.com/us/webapps/mpp/ua/privacy-full">PayPal privacy policy</a>. We will receive personally identifiable information from PayPal regarding your donation and retain it indefinitely as part of our record keeping. If you use the Let’s Encrypt community support forum, your actions there are governed by the privacy policy of our hosting and software provider for the forum, <a href="http://www.discourse.org/privacy-policy/">Civilized Discourse Construction Kit</a>. Data you provide when signing up for the forum, including email address and IP address, is retained indefinitely and we may share it as described below in “What We Share.”</p>
+<p>When you are a Visitor browsing the Let’s Encrypt web site, we collect personally identifying information only if you use the donate button or sign up to use the Let’s Encrypt community support forum. If you use the Donate button, your interactions with PayPal are governed by the <a href="https://www.paypal.com/us/webapps/mpp/ua/privacy-full">PayPal privacy policy</a>. We will receive personally identifiable information from PayPal regarding your donation and retain it indefinitely as part of our record keeping. If you use the Let’s Encrypt community support forum, your actions there are governed by the privacy policy of our hosting and software provider for the forum, <a href="https://www.discourse.org/privacy">Civilized Discourse Construction Kit</a>. Data you provide when signing up for the forum, including email address and IP address, is retained indefinitely and we may share it as described below in “What We Share.”</p>
 
 <p>Additionally, we may use third-party analytics services like Google Analytics to gauge traffic and popular pages on our web site. Third party analytics services will set and receive first-party cookies. These cookies do not contain personal information, but uniquely identify your browser software over time on our site. We respect the <a href="http://donottrack.us/">Do Not Track header</a> by strictly limiting the information our analytics services can collect and share for all Visitors.</p>
 
@@ -167,19 +170,18 @@
 </div>
 
     
-    <div class="donate-footer">
+    
 
+<div class="donate-footer">
   <div class="wrapper text-center">
-    <h2>Support Us</h2>
-    <p>Consider <a href="/become-a-sponsor/">becoming a sponsor</a> or simply <a href="/donate/">donate</a> via PayPal.</p>
-    <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-    <input type="hidden" name="cmd" value="_s-xclick">
-    <input type="hidden" name="hosted_button_id" value="AF6VLVH49A3QN">
-    <input type="image" src="/images/paypal_donate.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-    </form>
+    <h2>Support a more secure and privacy-respecting Web.</h2>
+    <div class="buttons">
+      <a class="accent" href="/donate/">Donate</a>
+    </div>
   </div>
-
 </div>
+
+
 
 <footer class="site-footer">
 
@@ -231,7 +233,7 @@
 
   <div class="linuxfoundation-collab-footer">
     <div class="wrapper">
-      <p>Linux Foundation is a registered trademark of The Linux Foundation. Linux is a registered <a href="https://www.linuxfoundation.org/programs/legal/trademark" title="Linux Mark Institute">trademark</a> of Linus Torvalds.</p>
+      <p>Linux Foundation is a registered trademark of The Linux Foundation. Linux is a registered trademark of Linus Torvalds.</p>
     </div>
   </div>
 
