themediatrust.com (archived on 2017-04-28)
{
  "alexa_rank": 169247,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 4960,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.4,
  "homepage_snapshot_redirected_domain": "themediatrust.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20170409025427id_/https://www.themediatrust.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20170409025427id_/http%3A//themediatrust.com",
  "interval": "2017_A",
  "link_text": "PRIVACY POLICY",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "themediatrust.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20170428093750id_/https%3A//www.themediatrust.com/privacy-security.php",
  "policy_title": "Privacy & Security | The Media Trust",
  "policy_url": "themediatrust.com/privacy-security.php",
  "sha1": "662815e76e6ecb3b46034d86f9d10bfee3fbc0a2",
  "simhash": 15299861396003732408,
  "simhash_updated": false,
  "site_hostname": "themediatrust.com",
  "site_url": "http://themediatrust.com",
  "smog": 15.25,
  "strict_updated": false,
  "timestamp": "20170428093750",
  "word_count": 781,
  "year": 2017
}

--- a/t/th/the/themediatrust.com.html
+++ b/t/th/the/themediatrust.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the themediatrust.com privacy policy that was archived on 2016-08-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20160817214302id_/https%3A//www.themediatrust.com/privacy-security.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the themediatrust.com privacy policy that was archived on 2017-04-28.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170428093750id_/https%3A//www.themediatrust.com/privacy-security.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html class="js" dir="ltr" prefix="content: http://purl.org/rss/1.0/modules/content/ dc: http://purl.org/dc/terms/ foaf: http://xmlns.com/foaf/0.1/ og: http://ogp.me/ns# rdfs: http://www.w3.org/2000/01/rdf-schema# sioc: http://rdfs.org/sioc/ns# sioct: http://rdfs.org/sioc/types# skos: http://www.w3.org/2004/02/skos/core# xsd: http://www.w3.org/2001/XMLSchema#" lang="en"><!--<![endif]--><head profile="http://www.w3.org/1999/xhtml/vocab">
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
@@ -119,6 +119,7 @@
 
                             <li class="expanded menu-mlid-697">
                                 <a href="digital-threat-intelligence.php">Digital Threat Intelligence</a>
+                                
                                 <!-- add links-->
                             </li>
                             <li class="expanded menu-mlid-697">
@@ -236,12 +237,14 @@
                                             <a title="Blog" href="http://blog.themediatrust.com/" target="_blank">Blog</a>
                                         </li>
                                         <li class="leaf">
-                                            <a title="Brochures and White Papers" href="brochures.php">Brochures</a>
+                                            <a title="Brochures" href="brochures.php">Brochures</a>
                                         </li>
-                                         <li class="last leaf">
-                                            <a title="Brochures and White Papers" href="white-papers.php">White Papers</a>
+                                         <li class="leaf">
+                                            <a title="White Papers" href="white-papers.php">White Papers</a>
                                         </li>
-
+                                        <li class="last leaf">
+                                            <a title="Videos" href="videos.php">Videos</a>
+                                        </li>
 
                                     </ul>
                             </li>
@@ -396,6 +399,7 @@
 
                             <li class="sidr-class-expanded sidr-class-menu-mlid-697">
                                 <a href="digital-threat-intelligence.php">Digital Threat Intelligence</a>
+                                
                                 <!-- add links-->
                             </li>
                             <li class="sidr-class-expanded sidr-class-menu-mlid-697">
@@ -513,12 +517,14 @@
                                             <a title="Blog" href="http://blog.themediatrust.com/" target="_blank">Blog</a>
                                         </li>
                                         <li class="sidr-class-leaf">
-                                            <a title="Brochures and White Papers" href="brochures.php">Brochures</a>
+                                            <a title="Brochures" href="brochures.php">Brochures</a>
                                         </li>
-                                         <li class="sidr-class-last sidr-class-leaf">
-                                            <a title="Brochures and White Papers" href="white-papers.php">White Papers</a>
+                                         <li class="sidr-class-leaf">
+                                            <a title="White Papers" href="white-papers.php">White Papers</a>
                                         </li>
-
+                                        <li class="sidr-class-last sidr-class-leaf">
+                                            <a title="Videos" href="videos.php">Videos</a>
+                                        </li>
 
                                     </ul>
                             </li>
