mobilemoxie.com (archived on 2017-04-29)
{
  "alexa_rank": 389801,
  "analysis_subcorpus": true,
  "categories": "business;informationtech",
  "char_count": 11455,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.74,
  "homepage_snapshot_redirected_domain": "mobilemoxie.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20170325210246id_/http://www.mobilemoxie.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20170325210246id_/http%3A//mobilemoxie.com",
  "interval": "2017_A",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "mobilemoxie.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20170429175139id_/http%3A//www.mobilemoxie.com/privacy",
  "policy_title": "Privacy Policy for the MobileMoxie Mobile Marketing Tools",
  "policy_url": "mobilemoxie.com/privacy",
  "sha1": "d10ee6934e47a4c5fc2692e2abab7fdf4f652fd2",
  "simhash": 4237701240693203355,
  "simhash_updated": false,
  "site_hostname": "mobilemoxie.com",
  "site_url": "http://mobilemoxie.com",
  "smog": 15.02,
  "strict_updated": false,
  "timestamp": "20170429175139",
  "word_count": 1832,
  "year": 2017
}

--- a/m/mo/mob/mobilemoxie.com.html
+++ b/m/mo/mob/mobilemoxie.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the mobilemoxie.com privacy policy that was archived on 2016-10-26.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161026154809id_/https%3A//www.mobilemoxie.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the mobilemoxie.com privacy policy that was archived on 2017-04-29.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170429175139id_/http%3A//www.mobilemoxie.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head>
 <meta charset="UTF-8">
@@ -11,7 +11,7 @@
 <![endif]--><link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,700italic,400,700,600">
-<link rel="stylesheet" href="http://www.mobilemoxie.com/includes/css/multiplex/7/style.css">
+<link rel="stylesheet" href="https://www.mobilemoxie.com/includes/css/multiplex/7/style.css">
 <script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script><script type="text/javascript" src="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script><meta name="description" content="Please read our privacy policy to get a clear understanding of how we collect, use, protect or otherwise handle personally identifiable information.">
 <link rel="canonical" href="https://www.mobilemoxie.com/privacy/">
 </head>
@@ -72,7 +72,8 @@
                                     <div class="form-group">
                                     	<input name="password" id="floating_login__password" type="password" placeholder="Password" class="form-control">
 </div>
-                                    <input type="button" id="btnForgot" class="btn btn-sm" value="Forgot Password">&nbsp;<input type="submit" id="btnLogin" class="btn btn-default" value="Login">
+                                    <hr>
+<a href="/forgot_password/" id="btnForgot">Forgot Password</a>&nbsp;<input type="submit" id="btnLogin" class="btn btn-default" value="Login">
 </form>
                             </div>
                         </li>
@@ -104,26 +105,17 @@
                                 </div>
                             </div>
                         </li>
-                        <li class="dropdown navbar-fullwidth marketing-tools">
-                            <a class="dropdown-toggle" title="Marketing Tools" href="/" data-toggle="dropdown">Marketing Tools</a>
-                            <div class="dropdown-menu">
-                                <div class="container">
-                                    <div class="dropdown-content">
-                                        <a href="/tools/marketing_gallery/">Mobile Marketing Gallery</a>
-                                    	<a href="/tools/marketing_news/">Mobile Marketing News Archive</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </li>
                         <li><a href="/tools/">Explore</a></li>
                         <li><a href="/consulting/">Consulting</a></li>
+                        <li><a href="https://api.mobilemoxie.com">API</a></li>
+                        <li><a href="/faq/">FAQ</a></li>
+						<li><a href="/contact/">Support</a></li>
                         <li class="dropdown navbar-fullwidth about-moxie">
                             <a href="/" data-toggle="dropdown" class="dropdown-toggle" title="About MobileMoxie">About</a>
                             <div class="dropdown-menu">
                                 <div class="container">
                                     <div class="dropdown-content">
                                         <a href="/about/">About MobileMoxie</a>
-                                        <a href="/our-story/">Our Story</a>
                                         <a href="/team/">Our Team</a>
                                         <a href="/contact/">Contact Us</a>
                                     </div>
@@ -132,7 +124,7 @@
                         </li>
                         <li><a href="/blog/">Blog</a></li>
                     </ul>
-</div>   
+</div>
             </div>
         
     </div>
@@ -278,6 +270,13 @@
                         <div class="form-group">
                             <input name="contact__email" type="email" class="form-control" id="contact__email" placeholder="Email">
 </div>
+                        <div class="form-group">
+                        	<select name="contact__topic" class="form-control" id="contact__topic"><option value="">-- Please Select a Topic --</option>
+<option value="sales">Sales</option>
+<option value="support">Support</option>
+<option value="api">API Inquiry</option>
+<option value="other">Other</option></select>
+</div>
                 	</div>
                     <div class="col-md-6">
                     	<div class="form-group">
@@ -303,60 +302,7 @@
         </ul>
 <p>Copyright © 2015 MobileMoxie.com. All rights reserved.</p>
     </div>
-</footer><script type="text/javascript" src="http://www.mobilemoxie.com/templates/multiplex/js/7/listeners.js"></script>
+</footer><script type="text/javascript" src="https://www.mobilemoxie.com/templates/multiplex/js/7/listeners.js"></script>
 
 
-<!--
-80-->
-
-<!--
-Array
-(
-    [REDIRECT_UNIQUE_ID] => WBDQOX8AAQEAACW@62AAAAAP
-    [REDIRECT_PHP_DOCUMENT_ROOT] => /mnt/stor19-wc2-dfw1/1003228/www.mobilemoxie.com/web/content
-    [REDIRECT_STATUS] => 200
-    [UNIQUE_ID] => WBDQOX8AAQEAACW@62AAAAAP
-    [PHP_DOCUMENT_ROOT] => /mnt/stor19-wc2-dfw1/1003228/www.mobilemoxie.com/web/content
-    [HTTP_USER_AGENT] => Mozilla/5.0 (compatible; archive.org_bot +http://www.archive.org/details/archive.org_bot)
-    [HTTP_X_FORWARDED_FOR] => 207.241.229.227
-    [HTTP_ACCEPT] => text/html,application/xhtml+xml,application/xml;q=0.9,*/*;q=0.8
-    [HTTP_HOST] => www.mobilemoxie.com
-    [HTTP_REFERER] => http://www.mobilemoxie.com/
-    [HTTP_X_MOSSO_DT] => PHP56-23 VS
-    [HTTP_CONNECTION] => Keep-Alive
-    [PATH] => /usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
-    [SERVER_SIGNATURE] => <address>Apache/2.4 Server at www.mobilemoxie.com Port 80</address>
-
-    [SERVER_SOFTWARE] => Apache/2.4
-    [SERVER_NAME] => www.mobilemoxie.com
-    [SERVER_ADDR] => 10.187.248.163
-    [SERVER_PORT] => 80
-    [REMOTE_ADDR] => 207.241.229.227
-    [DOCUMENT_ROOT] => /mnt/stor19-wc2-dfw1/1003228/www.mobilemoxie.com/web/content
-    [REQUEST_SCHEME] => http
-    [CONTEXT_PREFIX] => 
-    [CONTEXT_DOCUMENT_ROOT] => /mnt/stor19-wc2-dfw1/1003228/www.mobilemoxie.com/web/content
-    [SERVER_ADMIN] => root@localhost
-    [SCRIPT_FILENAME] => /mnt/stor19-wc2-dfw1/1003228/www.mobilemoxie.com/web/content/index.php
-    [REMOTE_PORT] => 10640
-    [REDIRECT_QUERY_STRING] => call=privacy//
-    [REDIRECT_URL] => /privacy/
-    [GATEWAY_INTERFACE] => CGI/1.1
-    [SERVER_PROTOCOL] => HTTP/1.0
-    [REQUEST_METHOD] => GET
-    [QUERY_STRING] => call=privacy//
-    [REQUEST_URI] => /privacy/
-    [SCRIPT_NAME] => /index.php
-    [PHP_SELF] => /index.php
-    [REQUEST_TIME_FLOAT] => 1477496889.633
-    [REQUEST_TIME] => 1477496889
-    [argv] => Array
-        (
-            [0] => call=privacy//
-        )
-
-    [argc] => 1
-)
-
--->
 </body></html>
